<resources>
    <string name="app_name">datateman</string>
    <string name="name">name:</string>
    <string name="school">school:</string>
    <string name="hobby">hobby:</string>
    <string name="save">save</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="floatbtn">floatbtn</string>
    <string name="image">Image</string>
    <string name="gallery">Gallery</string>
    <string name="camera">camera</string>
    <string name="delete_image">delete image</string>
</resources>