<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/et_edit_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:inputType="textPersonName"
        tools:ignore="Autofill,TouchTargetSizeCheck,VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/et_edit_school"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/school"
        android:inputType="text"
        tools:ignore="Autofill,TouchTargetSizeCheck,VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/et_edit_hobby"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hobby"
        android:inputType="text"
        tools:ignore="Autofill,TouchTargetSizeCheck,VisualLintTextFieldSize" />

</LinearLayout>
